Change the method to execute the commands to work properly